log
Thu 16 May 2024 02:25:05 AM UTC: 
 tests:  0|5
total_score: 0/70
48deaaf
Thu 16 May 2024 03:04:30 AM UTC: 
 sudoku.c | 47 +++++++++++++++++++++++++++++++++++------------
 1 file changed, 35 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:7: error: unused variable ‘auxSudo’ [-Werror=unused-variable]
   57 |   int auxSudo = n->sudo[0][0];
      |       ^~~~~~~
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:80:15: error: unused variable ‘newN’ [-Werror=unused-variable]
   80 |         Node *newN = copy(n);
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
53fdc39
Thu 16 May 2024 03:04:50 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:7: error: unused variable ‘auxSudo’ [-Werror=unused-variable]
   57 |   int auxSudo = n->sudo[0][0];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b45c0ee
Thu 16 May 2024 03:05:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bb5de95
Thu 16 May 2024 03:16:49 AM UTC: 
 sudoku.c | 28 ++++++++--------------------
 1 file changed, 8 insertions(+), 20 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘numero’ [-Werror=unused-variable]
   53 |       int numero = n->sudo[i][k];
      |           ^~~~~~
sudoku.c:49:7: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   49 |   int submatriz[9][9] = {};
      |       ^~~~~~~~~
sudoku.c:48:7: error: unused variable ‘columna’ [-Werror=unused-variable]
   48 |   int columna[9][9] = {};
      |       ^~~~~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
52fabae
Thu 16 May 2024 03:17:43 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘numero’ [-Werror=unused-variable]
   53 |       int numero = n->sudo[i][k];
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c250dc
Thu 16 May 2024 03:17:54 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9d56bc2
